# synthesize_PDMX_stems

./: .gitignore  .gitmodules  LICENSE  README.md  SETUP.md  analyze_stem_lengths.py  pyproject.toml  synthesize.py  synthesize_helper.py  synthesize_helper_extractor.sh  synthesize_manager.py  synthesize_rd_subset.py  test_soundfonts.py  test_synthesis.py
analysis/: README.md  analyze_durations.py  analyze_song_lengths.py  analyze_stems.py  output  pdmx_lengths.py  plots.py  report.py
analysis/tests/: test_analysis.py  test_song_lengths.py
experiments/: README.md  TUNING.md  __init__.py  paths.py  probe_stems.py  probe_stems.yaml  probe_stems_silence_audit.yaml
experiments/ablation_listening/: README.md  __init__.py  aggregate.py  aggregate_webmushra.py  catalog.py  finish_ablations.py  generate_webmushra.py  paths.py  prepare_clips.py  serve.py  serve_webmushra.py  session.py  trial_manifest.yaml  trial_manifest_webmushra.yaml  webmushra.py
experiments/ablation_listening/output/: results_notes.json  results_notes.md
experiments/ablation_listening/static/: index.html  style.css  test.html  test.js
experiments/ablation_listening/tests/: test_catalog.py  test_serve.py  test_session.py  test_webmushra.py
experiments/listening/: README.md  __init__.py  aggregate.py  catalog.py  final_verify.py  json_util.py  serve.py  session.py  verification.py
experiments/listening_shared/: README.md  __init__.py  scale.py
experiments/model_listening/: README.md  __init__.py  aggregate.py  catalog.py  paths.py  serve.py  trial_manifest.yaml
experiments/patch_sweep/: GUIDE.md  README.md  __init__.py  config.py  lock.py  patch_grid.yaml  record_winners.py  results_notes.md  soundfonts.yaml  sweep.py  winners.py  winners.yaml  winners_locked.yaml
experiments/preset_sweep/: GUIDE.md  README.md  __init__.py  bypass_rules.py  clips_dir.py  config.py  diverse_stems.py  lock.py  preset_grid.yaml  probe_stems.yaml  record_winners.py  results_notes.md  sweep.py  winners.py  winners.yaml  winners_locked.yaml
experiments/tests/: test_probe_stems.py
shared/: README.md  config.py  csv_tables.py  repo_symlinks.py  setup_symlinks.py
shared/tests/: test_csv_tables.py  test_repo_symlinks.py
spdmx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
synthesis/: README.md  RENDERING_NOTES.md  audio.py  build_spdmx.py  cli_common.py  dataset.py  fx.py  patches.py  paths.py  synthesize.py
synthesis/listening/: README.md  __init__.py  catalog.py  preset_sweep_catalog.py  serve.py
synthesis/realify/: README.md  SETUP.md  SILENCE.md  chunking.py  preset_config.py  presets.yaml  realify.py  silence.py
synthesis/tests/: conftest.py  test_audio.py  test_dataset.py  test_equal_length.py  test_fx.py  test_patches.py  test_soundfonts.py  test_synthesis.py  test_synthesize_cli.py
(+61 files in other folders)
