[project]
name = "spdmx"
version = "0.2.0"
description = "Synthesize PDMX symbolic music as stems, captions, and SA3-realified audio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mido",
    "numpy",
    "pandas",
    "pyyaml",
    "soundfile",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "tqdm",
    "pyloudnorm",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[dependency-groups]
dev = ["pytest"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
testpaths = [
    "shared/tests",
    "synthesis/tests",
    "synthesis/listening/tests",
    "synthesis/realify/captions/tests",
    "synthesis/realify/tests",
    "analysis/tests",
    "experiments/preset_sweep/tests",
    "experiments/patch_sweep/tests",
    "experiments/listening/tests",
    "experiments/tests",
]
markers = [
    "gpu: tests requiring CUDA",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "synthesis*", "analysis*", "experiments*"]
